fixed nav overlay on smaller screen

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -193,7 +193,7 @@
     z-index: 1000;
     transform: translateX(250%);
     transition: transform 0.2s;
-    box-shadow: 0 0 0 22rem rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 0 50rem rgba(0, 0, 0, 0.6);
     padding: 4rem;
   }
 
